Phase 20: Final audit + README + repo update
Audit complet vs README original:
  - 13 hooks verified (7 BTC + 6 Purpur)
  - 79 modules owned (all features present)
  - Zero Features: all 8 config keys + global world support
  - Folia: inherited from ASP base (SlimeWorld + vanilla)
  - Redstone: Alternate Current (Moonrise)
  - Custom events: in old overlay, to port later

Retired from TODO:
  - WASD controllers + Rideables (custom system planned)
  - LightnightGrim (standalone plugin)

README: 188 lines - build, deploy, config, features, API, structure
repo/: publication guide + deploy instructions